# ofga-example

./: .env  .gitignore  README.md  authorization_model.dsl  confiugration.json  pyproject.toml  updated_configuration.json
data/: doc_alice.txt  doc_group_b.txt  public_doc.txt
data/authorization_models/: authorization_model_document.dsl  authorization_model_document.json  authorization_model_tabular_data.dsl  authorization_model_tabular_data.json
data/authorization_models/default_allow/: authorization_model.dsl  authorization_model.json
data/authorization_models/default_deny/: authorization_model.dsl  authorization_model.json
data/requests/: finance_alice.json  finance_bob.json  hr_alice.json  simple_request.json  todo_alice.json  todo_other_user.json
data/tabular_data/: financial_data.csv  hr_data.csv
data/tuples/: tuples_document.json
docs/: Authorization model for documents.md  Authorization model for tabular data.md  Don't roll your own.md  Fine grained acls and Zanzibar.md  README.md  authorization_model_for_documents.md
src/agent/: __init__.py  agent.py  custom_types.py  di.py  main.py
src/agent/sub_agents/: __init__.py  di.py  document_agents.py  tabular_agent.py
src/cli_commands/: __init__.py
src/cli_commands/create_store/: __init__.py  main.py
src/cli_commands/write_auth_model/: __init__.py  main.py
src/cli_commands/write_tuples/: __init__.py  entities.py  main.py
src/configuration/: __init__.py  configuration_model.py
src/create_store/: main.py
src/ofga_operations/: __init__.py  checks.py  objects.py  store.py  tuples.py  utils.py
src/project_types/: __init__.py  utils.py
src/ui/: main.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  startup_script.sh  variables.tf  versions.tf
tests/ofga_operations/: test_checks.py  test_objects.py
tuples/: tuples_document.json
